--- a/teachdentistry/templates/main/map.html
+++ b/teachdentistry/templates/main/map.html
@@ -42,6 +42,8 @@
 
 {% block pagetitle %}<h2 class="pagetitle">Interactive Map</h2>{% endblock %}
 
+{% block masthead %}{% endblock %}
+
 {% block navrightextra %}
 {% endblock %}
 
