--- a/teachdentistry/templates/main/index.html
+++ b/teachdentistry/templates/main/index.html
@@ -1,8 +1,11 @@
 {% extends 'base_teachdentistry.html' %}
 
+{% block primarynav %}{% endblock %}
 {% block content %}
 <div class="hero-unit">
 <h1>Teach Dentistry<br/>is under construction</h1>
 <p>Please pardon our appearance.</p>
 </div>
+
+{% if request.user.is_superuser %}<a href="/intro/">Go to Content</a>{% endif %}
 {% endblock %}
