--- a/teachdentistry/templates/main/page.html
+++ b/teachdentistry/templates/main/page.html
@@ -36,9 +36,12 @@
 
 {% block breadcrumbs %}
 {% endblock breadcrumbs %}
-{% block masthead %}{% endblock %}
+
+{% block section_thumbnail %}
+<div class="section-thumbnail"><div class="section-slug thumbnail-{{module.slug}}"></div><h3 style="float: left;">SECTION: {{module.slug|upper}}</h3></div>
+{% endblock %}
+
 {% block content %}
-<b>{{module.slug}}</b>
     <div id="content" class ="module-{{module.slug}}">
         {% if needs_submit %}
             {% if is_submitted %}
