--- a/teachdentistry/templates/main/map.html
+++ b/teachdentistry/templates/main/map.html
@@ -49,6 +49,8 @@
 {% block breadcrumbs %}
 {% endblock breadcrumbs %}
 
+{% block carousel_slideshow %}{% endblock %}
+
 {% block container %}
     <div class="map-container">
         <div class="search">
