--- a/media/css/main.css
+++ b/media/css/main.css
@@ -327,6 +327,125 @@ div.map-container div.map {
 
 
 /*--------------------------------------------------
+    Home page slide show and login
+  --------------------------------------------------*/
+
+#invitation {
+    position: relative;
+    display: block;
+    height: 250px;
+    width: auto;
+    margin: 20px;
+    padding: 0;
+    border: 0;
+    border: 1px solid #666;
+    background-color: #999;
+}
+
+.text-content {
+    width: auto;
+    font: 20px normal "Century Gothic", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #fff;
+    text-shadow: 1px 1px #000000;
+    margin: 0px;
+    padding: 0px;
+}
+
+.text-content h2 {
+    margin: 0px;
+    padding: 0px 0px 10px 0px;
+    border: 0;
+    line-height: 100%;
+    font-weight: normal;
+    font-size: 36px;
+}
+
+#invitation #phrase1 {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+ }
+
+#invitation #phrase2 {
+    position: absolute;
+    left: 10px;
+    bottom: 20px;
+    font-size: 24px;
+ }
+
+#invitation #login {
+    position: absolute;
+    right: 140px;
+    bottom: 20px;
+    z-index: 100;
+}
+
+#invitation #signup {
+    position: absolute;
+    right: 30px;
+    bottom: 20px;
+}
+
+#invitation #login-overlay {
+    position: relative;
+    height: 100%;
+    width: auto;
+    background-color: #333;
+    z-index: 100;
+    opacity: 0.9;
+    filter: alpha(opacity=90);
+    -moz-opacity:0.9;
+}
+
+#invitation .login-set {
+    display: none;
+}
+
+#invitation .well {margin: 0; padding: 0;}
+
+#login-window {
+    position: absolute;
+    top: 10px;
+    bottom: 10px;
+    right: 130px;
+    width: 480px;
+    height: 210px;
+    margin: 0px;
+    padding: 10px !important;
+    background-color: #fff;
+    z-index: 200;
+}
+
+#login-window #login-form {
+    position: relative;
+    margin-top: 40px;
+    width: 480px;
+    height: 170px;
+}
+
+#login-form form {
+    margin: 0px;
+    padding: 0;
+    border: 0;
+}
+
+#login-form #td_login {
+    position: absolute;
+    bottom: 1px;
+    right: -1px;
+}
+
+#login-window .close {
+  font-size: 30px;
+  font-weight: bold;
+  color: #333;
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+}
+
+
+
+/*--------------------------------------------------
     Bootstrap Responsive Addition
   --------------------------------------------------*/
 
@@ -514,6 +633,3 @@ div.map-container div.map {
 }
 
 
-/*--------------------------------------------------
-    Bootstrap Override
-  --------------------------------------------------*/
