--- a/teachdentistry/templates/main/edit_page.html
+++ b/teachdentistry/templates/main/edit_page.html
@@ -3,6 +3,8 @@
 {% load bootstrap %}
 {% load render %}
 {% block title %}{{section.label}} (edit){% endblock %}
+{% block carousel_slideshow %}{% endblock %}
+
 {% block js %}
 
 <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.3/themes/base/jquery-ui.css" type="text/css" media="all" /> 
