--- a/teachdentistry/templates/main/instructor_page.html
+++ b/teachdentistry/templates/main/instructor_page.html
@@ -16,6 +16,7 @@
 {% endblock %}
 
 
+{% block carousel_slideshow %}{% endblock %}
 {% block content %}
 <a href="{{section.get_absolute_url}}">student view of page</a>
 <h1>{{ section.label }}</h1>
