--- a/teachdentistry/templates/main/page.html
+++ b/teachdentistry/templates/main/page.html
@@ -34,6 +34,8 @@
     </ul>
 {% endblock %}
 
+{% block carousel_slideshow %}{% endblock %}
+
 {% block breadcrumbs %}
 {% endblock breadcrumbs %}
 
