--- a/teachdentistry/templates/base_teachdentistry.html
+++ b/teachdentistry/templates/base_teachdentistry.html
@@ -76,6 +76,17 @@
 
         {% block carousel_slideshow %}
         <div class="well" id="invitation">
+<div id="TDCarousel" class="carousel slide">
+  <!-- Carousel items -->
+  <div class="carousel-inner">
+    <div class="active item"><img src="/site_media/img/stock-img1.jpg" /></div>
+    <div class="item"><img src="/site_media/img/stock-img2.jpg" /></div>
+    <div class="item"><img src="/site_media/img/stock-img3.jpg" /></div>
+  </div>
+</div>
+
+
+
                 <div class="text-content" id="phrase1">
                 <h2>Welcome to TeachDentistry.org</h2>
                 Enjoy teaching tomorrow’s dentists today
@@ -151,6 +162,9 @@ $(document).ready(function($){
     $("#login-window #close-login").click(function(){
         $(".login-set").fadeOut("fast", "linear");
     });
+    $('.carousel').carousel({
+  interval: 5000
+})
 });
 </script>
     {% if STAGING_ENV %}
