--- a/teachdentistry/templates/main/map.html
+++ b/teachdentistry/templates/main/map.html
@@ -2,32 +2,15 @@
 {% load render %}
 
 {% block js %}
-    <script type="text/javascript" src="/site_media/js/app/viewport.js"></script>
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key={{settings.GOOGLE_API_KEY}}&sensor=false">
     </script>
+    <script type="text/javascript" src="/site_media/js/app/map.js"></script>
     
     {% if accessible %}
         <script type="text/javascript">        
             jQuery(document).ready(function() {
-    
-                jQuery(window).resize(function () {  
-                    var viewport = getVisibleViewport();
-                    jQuery("#map-canvas").css({
-                        'height': viewport.height + "px",
-                    });
-                });
-                
-                var mapOptions = {
-                    center: new google.maps.LatLng(39.8282, -98.5795),
-                    zoom: 4,
-                    mapTypeId: google.maps.MapTypeId.ROADMAP
-                };
-                
-                var elt = document.getElementById("map-canvas");
-                var mapInstance = new google.maps.Map(elt, mapOptions);
-                
-                jQuery(window).trigger("resize");
+                var view = new EducatorMapView({el: "#map-container" }); 
             });
         </script>
     {% endif %}
@@ -52,7 +35,7 @@
 {% block carousel_slideshow %}{% endblock %}
 
 {% block container %}
-    <div class="map-container">
+    <div id="map-container" class="map-container">
         <div class="search">
             <div class="accordion-group">
                 <div class="accordion-heading">
