--- a/teachdentistry/templates/main/index.html
+++ b/teachdentistry/templates/main/index.html
@@ -3,8 +3,8 @@
 {% block primarynav %}{% endblock %}
 {% block content %}
 <div class="hero-unit">
-<h1>Teach Dentistry<br/>is under construction</h1>
-<p>Please pardon our appearance.</p>
+<h2>Your login is successful</h2>
+<p>Please pardon our appearance. Teach Dentistry is under construction.</p>
 </div>
 
 {% if request.user.is_superuser %}<a href="/intro/">Go to Content</a>{% endif %}
