--- a/teachdentistry/templates/main/page.html
+++ b/teachdentistry/templates/main/page.html
@@ -64,9 +64,12 @@
             {% if request.user.is_anonymous %}
             {% else %}
                 {% if is_submitted %}
+                {% if allow_redo %}
                     <form action="." method="post">
                         <input type="hidden" name="action" value="reset" />
+                        <input type="submit" value="Clear your answers and try again" class="btn btn-info right" />
                     </form>
+                {% endif %}
                 {% else %}
                     <input type="submit" value="Submit" class="btn btn-primary" />
                 </form>
