--- a/teachdentistry/templates/registration/login.html
+++ b/teachdentistry/templates/registration/login.html
@@ -1,5 +1,7 @@
 {% extends "base_teachdentistry.html" %}
 
+{% block usernav %}{% endblock %}
+
 {% block login_overlay %}
 <div class="btn btn-large btn-primary" id="login">
 Log in
