Putting down basic map infrastructure Tastypie for retrieving educators Rendering educators to the Google Map Popping InfoWindow on click Setting up skeletal profile page

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -95,6 +95,15 @@ div.map-container div.map {
     width: 100%;
 }
 
+div.educator-name {
+    color: red;
+    font-weight: bold;
+    font-size: 24px;    
+}
+
+div.educator-bio-summary {
+}
+
 
 /*--------------------------------------------------
     Teach Dentistry CSS
