--- a/teachdentistry/templates/main/map.html
+++ b/teachdentistry/templates/main/map.html
@@ -2,15 +2,34 @@
 {% load render %}
 
 {% block js %}
+    <script src="/site_media/js/json2.js" type="text/javascript" ></script>
+    <script src="/site_media/js/underscore-min.js" type="text/javascript" ></script>
+    <script src="/site_media/js/backbone-min.js" type="text/javascript" ></script>
+    <script src="/site_media/js/backbone-tastypie.js" type="text/javascript" ></script>
+
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key={{settings.GOOGLE_API_KEY}}&sensor=false">
     </script>
     <script type="text/javascript" src="/site_media/js/app/map.js"></script>
     
+    <script type="text/template" id="educator-template">
+        <div class="educator-name"><%= name %></div>
+        <% if (bio_summary !== null) { %>
+            <div class="educator-bio-summary"><%= bio_summary %></div>
+        <% } %>
+        <% if (headshot !== null) { %>
+            <div class="educator-headshot">
+                <img src="<%= headshot %>" alt="headshot" />
+            </div>
+        <% } %>
+        
+        <a href="/profile/<%=id%>/">Link To Profile</a>        
+    </script>    
+    
     {% if accessible %}
         <script type="text/javascript">        
             jQuery(document).ready(function() {
-                var view = new EducatorMapView({el: "#map-container" }); 
+                var view = new EducatorMapView({el: "#map-container"}); 
             });
         </script>
     {% endif %}
@@ -24,7 +43,6 @@
 {% block title %}Interactive Map{% endblock %}
 
 {% block pagetitle %}<h2 class="pagetitle">Interactive Map</h2>{% endblock %}
-
 
 {% block navrightextra %}
 {% endblock %}
